# Summer-school

./: README.md
Week1/Multi-sensor/: arduino.ino
Week1/PID-temperature-control/: control.m  simulinkModel.slx
Week2/Calculator-service/install/: local_setup.sh  setup.sh
Week2/Calculator-service/install/calculator_client/lib/calculator_client/: calculator_client
Week2/Calculator-service/install/calculator_client/share/calculator_client/: package.bash  package.dsv  package.sh  package.zsh
Week2/Calculator-service/install/calculator_interfaces/share/calculator_interfaces/: local_setup.sh  package.bash  package.dsv  package.sh  package.zsh
Week2/Calculator-service/install/calculator_server/lib/calculator_server/: calculator_server
Week2/Calculator-service/install/calculator_server/share/calculator_server/: package.bash  package.dsv  package.sh  package.xml  package.zsh
Week2/Calculator-service/log/: latest_build
Week2/Calculator-service/src/calculator_client/: package.xml  setup.cfg  setup.py
Week2/Calculator-service/src/calculator_interfaces/: CMakeLists.txt  setup.cfg  setup.py
Week2/Calculator-service/src/calculator_server/: setup.cfg  setup.py
Week2/Calculator-service/src/sensor_data_pkg/: setup.py
Week2/Calculator-service/src/sensor_data_pkg/sensor_data_pkg/: temperature_publisher.py  temperature_subscriber.py
Week2/Temperature-publisher-subscriber/install/: local_setup.sh  setup.sh
Week2/Temperature-publisher-subscriber/log/: latest_build
Week2/Temperature-publisher-subscriber/src/sensor_data_pkg/: package.xml  setup.cfg
(+30 files in other folders)
