<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>calculator_server</name>
  <version>0.0.0</version>
  <description>Calculator service server</description>
  <maintainer email="mnepraj@gmail.com">Prajwal M</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>calculator_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

